@@ -11,10 +11,23 @@
   <auto_post>yes</auto_post>
   <path>/etc/poker-engine</path> 
 
-  <table name="One" count="2" />
-  <table name="Two" count="1" />
-  <table name="Three" count="1" />
-  <table name="Four" count="5" />
+  <table name="One" count="4" />
+  <table name="Two" count="4" />
+  <table name="Three" count="4" />
+  <table name="Four" count="4" />
+
+  <table name="Five" count="4" />
+  <table name="Six" count="4" />
+  <table name="Seven" count="4" />
+  <table name="Eight" count="4" />
+
+  <table name="Nine" count="4" />
+  <table name="Ten" count="4" />
+  <table name="Eleven" count="4" />
+  <table name="Twelve" count="4" />
+
+  <table name="Thirteen" count="4" />
+  <table name="Fourteen" count="4" />
 
   <tournament name="sitngo4" count="3" />
   <tournament name="sitngo8" count="7" />
